deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:  
  replicas: 1
  template:
    metadata:
      labels:
        app: api-worker
    spec:
      containers:
      - name: api-container
        image: rjacdevops/api
        ports:
        - containerPort: 8081
  selector:
    matchLabels:
      app: api-worker
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-worker
  ports:
    - port: 8081
      targetPort: 8081
