replicaset.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-endpoint-service
spec:
  selector:
    app: endpoint
  ports:
    - port: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-route
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-endpoint-service
            port:
              number: 8081
